--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.path=/api-docs
 
-logging.level.root=DEBUG
+logging.level.root=ERROR
 logging.file.name=SystemLogOutput.log
 logging.logback.rollingpolicy.max-file-size=10MB
-logging.logback.rollingpolicy.max-history=200
+logging.logback.rollingpolicy.max-history=500
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %logger{36} - %msg%n
 
